Updated videos for chapter 7

--- a/lectures/ucl_presentation_style.scss
+++ b/lectures/ucl_presentation_style.scss
@@ -21,8 +21,11 @@ $presentation-h1-font-size: 1.5em;
   max-height: 80%;
   border: 1px solid #000;
 }
-.reveal .big-text {
+.reveal .big-text, .reveal .big-text td, .reveal .big-text th {
   font-size: 2em;
+}
+.reveal .bigish-text, .reveal .bigish-text td, .reveal .bigish-text th {
+  font-size: 1.5em;
 }
 .reveal .bottom-note {
   clear: both;
@@ -101,6 +104,13 @@ div.right {
 }
 .reveal dt {
   margin-top: 0.75em;
+}
+.inline-box {
+  display: inline-block;
+  margin: 0 0.2em 0;
+  padding: 0.2em;
+  border: 1px solid #111;
+  border-radius: 10px;
 }
 
 // tables
